Replace MockedRestServerEngineUtils functionality with MultiUserUtils and ResponseBlockingService, encapsulating logic into dedicated utility classes to improve modularity and simplify dependencies